# timecp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
experiments/: GiftEval.yml  TIME.yaml  chronos_zs_original.yaml  fev-bench.yaml  fev-bench_mini.yaml
paper/: aci_comp.tex  appendix_tables.tex  main.tex  ref.bib
scripts/: cp_eval.py  forecast.py  generate_dashboard.py  parse_summaries.py
scripts/paper/: generate_appendix.py  generate_plots_and_tables.py  generate_results.py
src/timecp/: __init__.py  base.py  cp_eval.py  evaluation.py  utils.py
src/timecp/data/: __init__.py  convert.py  gift_eval.py  loader.py  tasks.py
src/timecp/methods/: __init__.py  _scan.py  aci.py  acmcp.py  adaptive_cqr.py  agaci.py  cafht.py  cfrnn.py  copula_cpts.py  cp.py  cqr.py  dtaci.py  pid.py  spci.py
src/timecp/models/: __init__.py  base.py  chronos.py  flowstate.py  timesfm.py  tirex.py
tests/: test_clone.py  test_cp_eval_modes.py  test_data.py  test_methods.py  test_score_types.py
