[project]
name = "time-cp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    # "darts>=0.44.1",
    # "datasets<3.0.0",
    # "datasets>=4.8.5",
    "fev>=0.8.0",
    "jax>=0.10.2",
    "jupyter",
    "numba>=0.62.1",
    "numpy>=2.1.3",
    "optax>=0.2.8",
    "orjson>=3.11.9",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "sklearn-quantile>=0.1.1",
    "torch>=2.10",
    "transformers>=4.57.6",
    # "timebench",
]

[tool.uv]
package = true
default-groups = ["models"]
index-strategy = "unsafe-first-match"

[dependency-groups]
dev = [
    "prek>=0.4.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-gitignore>=1.3",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

models = [
    { include-group = "chronos" },
    { include-group = "flowstate" },
    { include-group = "patchtst" },
    { include-group = "timesfm" },
    { include-group = "tirex" },
    { include-group = "toto" },
]

chronos = ["chronos-forecasting>=2.2.2"]
flowstate = ["granite-tsfm"]
patchtst = ["granite-tsfm"]
timesfm = ["timesfm"]
tirex = ["tirex-ts>=1.4.1"]
toto = ["toto-models"]

cuda = ["tirex-ts[cuda]>=1.4.1"]

[project.optional-dependencies]
# all = [
#     "time-cp[chronos, flowstate, patchtst, timesfm, tirex]"
# ]
# chronos = ["chronos-forecasting>=2.2.2"]
# flowstate = ["granite-tsfm"]
# patchtst = ["granite-tsfm"]
# timesfm = ["timesfm"]
# tirex = ["tirex-ts[cuda]>=1.4.1"]

[tool.uv.sources]
granite-tsfm = { git = "https://github.com/ibm-granite/granite-tsfm.git" }
# timesfm = { git = "https://github.com/google-research/timesfm.git" }
timesfm = { git = "https://github.com/google-research/timesfm.git", branch = "hf-fix" }
timebench = { git = "https://github.com/zqiao11/TIME.git" }

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.ruff.format]
quote-style = "single"
# indent-style = "tab"
